# wine-external-manualmap

./: .gitmodules  CMakeLists.txt  main.c
shared/: mapping.h
shellcode/: shellcode.c
src/: main.c  pe.h
tests/: import-test.c  msgbox-test.c  test.c
